--- a/src/app/for-admin/subjects/subjects.component.html
+++ b/src/app/for-admin/subjects/subjects.component.html
@@ -28,6 +28,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                [showButtons]="false" />`
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal"
                                         (click)="createForm.reset();">Закрыть</button>
