--- a/src/app/for-admin/for-admin.component.html
+++ b/src/app/for-admin/for-admin.component.html
@@ -1,18 +1,18 @@
 <div class="container mt-5">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-lg-2 col-md-3 col-sm-4">
       <button class="btn btn-primary mb-1 w-100" routerLink="./faculties">Факультеты</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./buildings">Корпуса</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./audiences">Аудитории</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./subjects">Предметы</button>
-      <button class="btn btn-primary mb-1 w-100">Типы занятий</button>
+      <button class="btn btn-primary mb-1 w-100" routerLink="./lesson-types">Типы занятий</button>
       <button class="btn btn-primary mb-1 w-100">Группы</button>
       <button class="btn btn-primary mb-1 w-100" routerLink="./teachers">Преподаватели</button>
       <button class="btn btn-primary mb-1 w-100">Дисциплины преподавателей</button>
       <button class="btn btn-primary mb-1 w-100">Пользователи</button>
       <button class="btn btn-success mb-1 w-100" routerLink="/home">На главную</button>
     </div>
-    <div class="col-10">
+    <div class="col-lg-10 col-md-9 col-sm-8">
       <router-outlet></router-outlet>
     </div>
   </div>
