--- a/src/app/for-admin/subjects/subjects.component.html
+++ b/src/app/for-admin/subjects/subjects.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <button class="btn btn-primary mb-3" data-toggle="modal" data-target="#modalUpdate"
+            <button class="btn btn-primary mb-3 mt-3 mt-sm-0" data-toggle="modal" data-target="#modalUpdate"
                 (click)="openModal(false);">Создать новый</button>
             <div class="modal fade" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="modalUpdateTitle"
                 aria-hidden="true">
@@ -42,11 +42,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row d-none d-sm-flex">
+                <div class="col-6">
                     <h5>Название предмета</h5>
                 </div>
-                <div class="col-md-6">
+                <div class="col-6">
                     <h5>Действия</h5>
                 </div>
             </div>
