--- a/src/app/for-admin/faculty/faculty.component.html
+++ b/src/app/for-admin/faculty/faculty.component.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row d-none d-sm-flex">
                 <div class="col-md-3">
                     <h5>Название факультета</h5>
                 </div>
