--- a/src/app/for-admin/teachers/teachers.component.html
+++ b/src/app/for-admin/teachers/teachers.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <button class="btn btn-primary mb-3" data-toggle="modal" data-target="#modalUpdate"
+            <button class="btn btn-primary mb-3 mb-3 mt-3 mt-sm-0" data-toggle="modal" data-target="#modalUpdate"
                 (click)="openModal(false);">Создать нового</button>
             <div class="modal fade" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="modalUpdateTitle"
                 aria-hidden="true">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row d-none d-sm-flex">
                 <div class="col-md-6">
                     <h5>ФИО</h5>
                 </div>
