--- a/src/app/for-admin/for-admin.component.html
+++ b/src/app/for-admin/for-admin.component.html
@@ -9,7 +9,7 @@
         <button class="btn btn-primary mb-1 w-100" routerLink="./lesson-types">Типы занятий</button>
         <button class="btn btn-primary mb-1 w-100">Группы</button>
         <button class="btn btn-primary mb-1 w-100" routerLink="./teachers">Преподаватели</button>
-        <button class="btn btn-primary mb-1 w-100">Дисциплины преподавателей</button>
+        <button class="btn btn-primary mb-1 w-100" routerLink="./teacher-subjects">Дисциплины преподавателей</button>
         <button class="btn btn-primary mb-1 w-100">Пользователи</button>
         <button class="btn btn-success mb-1 w-100" routerLink="/home">На главную</button>
       </div>
