Done with CRUD group
Need to fix groups GET and select after changes in backend

--- a/src/app/for-admin/for-admin.component.html
+++ b/src/app/for-admin/for-admin.component.html
@@ -7,7 +7,7 @@
         <button class="btn btn-primary mb-1 w-100" routerLink="./audiences">Аудитории</button>
         <button class="btn btn-primary mb-1 w-100" routerLink="./subjects">Предметы</button>
         <button class="btn btn-primary mb-1 w-100" routerLink="./lesson-types">Типы занятий</button>
-        <button class="btn btn-primary mb-1 w-100">Группы</button>
+        <button class="btn btn-primary mb-1 w-100" routerLink="./groups">Группы</button>
         <button class="btn btn-primary mb-1 w-100" routerLink="./teachers">Преподаватели</button>
         <button class="btn btn-primary mb-1 w-100" routerLink="./teacher-subjects">Дисциплины преподавателей</button>
         <button class="btn btn-primary mb-1 w-100">Пользователи</button>
