--- a/src/app/schedule/schedule.component.scss
+++ b/src/app/schedule/schedule.component.scss
@@ -109,3 +109,21 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+// Selector
+
+p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  span {
+    margin: 0 2rem;
+    text-align: center;
+    width: 200px;
+  }
+
+  i {
+    cursor: pointer;
+  }
+}
